Fix issues with nav spacing after merge.

--- a/app/assets/stylesheets/components/_primary_nav.scss
+++ b/app/assets/stylesheets/components/_primary_nav.scss
@@ -30,7 +30,7 @@
 
   &:nth-of-type(2) {
     @include respond-to($mq-l) {
-      width: 120px;
+      width: 122px;
     }
   }
 
